fix: Исправлена проблема с экспортом Excel
- Реализовано файловое хранилище с pickle для данных организаций
- Добавлены функции save_organizations_data() и load_organizations_data()
- Обновлена функция export_excel() для загрузки данных из файла
- Обновлена функция get_organizations() для работы с файловым хранилищем
- Обновлен frontend для передачи города в запросах
- Исправлена проблема с потерей данных между запросами в многопроцессной среде Gunicorn
- Экспорт Excel теперь работает корректно с сохраненными данными

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -913,7 +913,8 @@
             async updateTable(retryCount = 0) {
                 try {
                     console.log(`🔄 Обновляем таблицу... (попытка ${retryCount + 1})`);
-                    const response = await fetch('/api/get_organizations');
+                    const cityName = this.cityInput.value.trim();
+                    const response = await fetch(`/api/get_organizations?city=${encodeURIComponent(cityName)}`);
                     console.log('📡 Статус ответа:', response.status);
                     console.log('📡 Заголовки ответа:', response.headers);
                     const data = await response.json();
